[package]
name = "torrent-core"
version = "0.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.67"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "sync"] }
torrent-parser = { path = "../torrent-parser" }
tracing = "0.1.40"
uuid = { version = "1.11.0", features = ["v4"] }
